--- a/elk.yml
+++ b/elk.yml
@@ -12,11 +12,6 @@ services:
     image: docker.elastic.co/kibana/kibana:7.4.0
     ports:
       - 5601:5601
-    environment:
-      - XPACK_MONITORING_ENABLED=false
-      - XPACK_SECURITY_ENABLED=false
-      - XPACK_GRAPH_ENABLED=false
-      - XPACK_REPORTING_ENABLED=false
   filebeat:
     image: docker.elastic.co/beats/filebeat:7.4.0
     deploy:
@@ -45,8 +40,7 @@ services:
       - /proc:/hostfs/proc:ro
       - /:/hostfs:ro
     user: root
-    environment:
-      - HOSTNAME={{.Node.Hostname}}
+    hostname: "{{.Node.Hostname}}"
     command:
       - -E
       - |
@@ -58,8 +52,6 @@ services:
             enabled:true
           }
         ] 
-      - -E
-      - name=$${HOSTNAME}
       - -E
       - processors={1:{add_docker_metadata:{host:unix:///var/run/docker.sock}}} 
       - -E
